# AI_project_

./: README.md
chat gpt와 보미 사전학습 모델 긍부정 판단 비교/: apple_laptop2.xlsx  combined_df.csv  gpt긍부정 판단.ipynb  lg_laptop2.xlsx  samsung_laptop2.xlsx  보미_real.ipynb
gec/: Dockerfile  pyproject.toml
gec/gec/: README.md
gec/gec/resources/: tag_type_GUM.json
gec/gec/src/: api.py  gunicorn.conf.py
gec/gec/src/v1/: router.py
gec/gec/src/v1/correct_text_utils/: calculator.py  depends.py  parser.py
gec/gec/src/v1/resources/: feedback.json
gec/gec/tests/: test_resources.py
gec/resources/: change_unicode.json  chatgpt_error_messages.txt  tag_type_AIDT.json  type_dict.json
gec/src/: api_commons.py
gec/src/v1/: correct_text.py  schemas.py
gec/src/v1/correct_text_utils/: edit_tag.py  exceptions.py  feedback.py  params.py  spacy_tokenizer.py
gec/tests/: conftest.py  test_main.py
melo_tts/: Dockerfile  requirements.txt
melo_tts/src/: api.py  api_commons.py
melo_tts/src/v1/: main.py  router.py
melo_tts/src/v1/melo/: utils.py  (+1 more)
데이터 전처리 예시/: Pretreatment.ipynb
신용카드연체예측/: [월곡동솜주먹]_신용카드 사용자 연체 예측.ipynb
자격증_빅분기 토스 _AICE/: LSTM 오늘사서 내일 파는 로직 적용해보기  (분류).ipynb  LSTM 환율 예측 (시계열분해+시고저종_3.ipynb  엔셀 대비.ipynb
자격증_빅분기 토스 _AICE/AICE/: Python활용AI모델링_01.전처리_정답_v3_20220219.ipynb  Python활용AI모델링_01.전처리_퀴즈_easy_v3_20220219.ipynb  Python활용AI모델링_02.머신러닝_딥러닝_퀴즈_easy_v3_20221010.ipynb
자격증_빅분기 토스 _AICE/빅분기/: 003000000.csv  T1빅분기복습-Copy1.ipynb  T1빅분기복습.ipynb  T2빅분기복습-2-Copy1.ipynb  T2빅분기복습-2.ipynb  T2빅분기복습.ipynb  input.egg  kt연습.ipynb  수험번호.csv  시험 5일전사.txt  주로 사용하는 패키지와 다이러리.ipynb
(+13 files in other folders)
